--- a/main.tex
+++ b/main.tex
@@ -38,6 +38,7 @@
 \usepackage{fontawesome5} % Para utilizar iconos de "fontawesome".
 \usepackage{pdflscape}  % Para colocar páginas en formato apaisado.
 \usepackage{array} % Para centrar verticalmente el contenido de las celdas de una tabla.
+\usepackage{svg} % Add this line in the preamble to use the svg package
 % ---------------------------------------------- %
 
 
