--- a/lib/chapter3.tex
+++ b/lib/chapter3.tex
@@ -439,14 +439,15 @@ El diagrama de flujo dónde se explica lo anteriormente descrito es el siguiente
 
     \begin{figure}[htbp]
     \centering
-    \includesvg{img/svg/gower-flow} % Note that the file extension is omitted
+    \includesvg[width=\linewidth]{img/svg/gower-flow} % Adjust width as needed
     \caption{Diagrama de Flujo Imputación por el método de la distancia de Gower}
     \label{fig:svg-gower}
 \end{figure}
 
 % Se devuelve el formato y la geometría de la página a sus valores originales:
 \end{landscape}
-\restoregeometry 
+\restoregeometry
+
 
 
 \paragraph*{k-Nearest Neighbor Imputation}\label{sec:k_Nearest Neighbor_Imputation}
